front-deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2 
kind: Deployment
metadata:
  name: front-deployment 
spec:
  replicas: 1 # tells deployment to run 2 pods matching the template 
  selector:
    matchLabels:
      app: angular-webapp
  template:
    metadata:
      labels:
        app: angular-webapp
    spec:
      containers:
      - name: angular-webapp
        image: mathieudielna/front-kubernetes:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 80
