angular.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-web
  template:
    metadata:
      labels:
        app: angular-web
    spec:
      containers:
        - name: angular-web
          image: mathieudielna/angular-web:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular-web
spec:
  selector:
    app: angular-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
