front-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service  
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
      run: angular-webapp
spec:
  ports:
  - port: 80 # Le port sur lequel le service est exposé à l'extérieur
    protocol: TCP
    targetPort: 80  # Le port sur le pod auquel le trafic doit être dirigé
  selector:
    app: angular-webapp
  type: LoadBalancer
