mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - port: 27017

# apiVersion: v1
# kind: Service
# metadata:
#   name: db-service
# spec:
#   selector:
#     app: db
#   ports:
#     - protocol: TCP
#       port: 27017
#       targetPort: 27017
