ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: front-end.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
    - host: backend.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-node
                port:
                  number: 3000
